# Emotional-Arm

./: README.md
movelt_config/: CMakeLists.txt  package.xml
movelt_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_arm.ros2_control.xacro  my_arm.srdf  my_arm.urdf.xacro  ros2_controllers.yaml
movelt_config/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
movelt_config/launch/demo/: move_group.launch.py
movelt_config/launch/gazebo_movelt/: demo.launch.py  gazebo_rsp.launch.py  move_group.launch.py  moveit_rviz.launch.py
movelt_config/scripts/: move_arm.py  move_arm_collision_primitive.py  move_arm_config.py  move_arm_fk.py  move_arm_ik.py  move_arm_keyboard.py  move_arm_playback.py  move_arm_pose.py  move_arm_record.py  plot_trajectory.py
movelt_config/scripts/records/: trajectory_20260509_171846.json  trajectory_20260509_172312.json  trajectory_20260509_172730.json  trajectory_20260521_000351.json  trajectory_20260521_000941.json  trajectory_20260521_001138.json  trajectory_20260522_205944.json  trajectory_20260522_211630.json
my_arm_description/: README.md  package.xml  setup.cfg  setup.py
my_arm_description/config/gazebo_control/: controllers.yaml  ros2_controllers.yaml  ros_gz_bridge_gazebo.yaml
my_arm_description/config/gazebo_eyeinhand/: ros_gz_bridge_camera.yaml
my_arm_description/config/gazebo_moveit/: controllers_moveit.yaml
my_arm_description/launch/: README_face_tracking.txt  camera_calib.launch.py  camera_driver.launch.py  display.launch.py  eyeinhand_real.launch.py  face_tracking_moveit.launch.py  face_tracking_real.launch.py  gazebo.launch.py  gazebo_control.launch.py  gazebo_eyeinhand.launch.py  gazebo_moveit.launch.py  servo_driver.launch.py
my_arm_description/meshes/: arm_1_link_1.stl  arm_2_link_1.stl  arm_3_link_1.stl  arm_4_link_1.stl  arm_5_link_1.stl  base_link.stl  lamp_link_1.stl  servo_2_link_2.stl  servo_3_link_1.stl  servo_4_link_1.stl  servo_5_link_1.stl  servo_6_link_1.stl
my_arm_description/models/aruco_board/: model.config  model.sdf
my_arm_description/my_arm_description/: aruco_keepalive_node.py  face_moveit_tracker.py  face_servo_tracker.py  rgb_to_bgr_node.py
my_arm_description/scripts/: README.txt  face_tracking_demo.md  generate_aruco.py  generate_chessboard.py  move_arm_real.py  rgb_to_bgr_node.py  st_read_angle.py  st_read_set.py
my_arm_description/urdf/control/: my_arm.ros2control
my_arm_description/urdf/core/: materials.xacro  my_arm.xacro
my_arm_description/urdf/gazebo/: my_arm.gazebo
my_arm_description/urdf/perception/: calibration_board.xacro  camera.xacro
my_arm_description/urdf/scenes/: display.xacro  gazebo.xacro  gazebo_control.xacro  gazebo_eyeinhand.xacro  gazebo_moveit.xacro
my_arm_description/worlds/: calibration_world.sdf
my_arm_hardware_interface/: package.xml  setup.cfg  setup.py
my_arm_hardware_interface/my_arm_hardware_interface/: hardware_interface.py  joint_pos_control.py
舵机资料/ST3215/: 舵机STS自定义通信协议.docx
