<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>my_arm_description</name>
  <version>0.0.0</version>
<description>The my_arm_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gz_ros2_control</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_ros</depend>
  <depend>camera_calibration</depend>
  <depend>easy_handeye2</depend>
  <depend>tf2_ros</depend>
  <depend>pymoveit2</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
